[gd_scene load_steps=6 format=3 uid="uid://ddbdbhcf4wn4u"]

[ext_resource type="Script" path="res://segment_info.gd" id="1_q42l7"]
[ext_resource type="Script" path="res://division_map.gd" id="2_5o1rl"]
[ext_resource type="Script" path="res://segment_info_label.gd" id="2_d45ft"]
[ext_resource type="Script" path="res://polyline_node2d.gd" id="4_44t8o"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7xxyh"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[node name="SegmentInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_q42l7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.207843, 0.239216, 0.388235, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
mouse_filter = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_7xxyh")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_d45ft")

[node name="DivisionMap" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
script = ExtResource("2_5o1rl")

[node name="PolylineNode2D" type="Node2D" parent="HBoxContainer/DivisionMap"]
script = ExtResource("4_44t8o")

[connection signal="resized" from="HBoxContainer/DivisionMap" to="HBoxContainer/DivisionMap" method="_on_resized"]
[connection signal="resized" from="HBoxContainer/DivisionMap" to="HBoxContainer/DivisionMap/PolylineNode2D" method="_on_division_map_resized"]
